added example for gwt.jvmArgs